2011-04-17  Bernhard Walle <bernhard@bwalle.de>

	* Add CMake build open 'BUILD_EXAMPLES' that allows to build the
	  library only.
	* Add SerialFile::readLine() method.

2011-03-06  Bernhard Walle <bernhard@bwalle.de>

	* Don't try to link against libcurses when libreadline has not been
	  found.
	* Change completion interface from ssize_t to int since Win32 has no
	  ssize_t.
	* Add compatibility strcasecmp() for Win32.
	* Only include "unistd.h" if we have it.
	* CMakeLists.txt: Switch to cmakedefine.

2011-03-05  Bernhard Walle <bernhard@bwalle.de>

	* Fix warning in serialfile_linux.cc.
	* Fix build on Linux.
	* Fix cmake library search on Mac OS.

2011-02-27  Bernhard Walle <bernhard@bwalle.de>

	* Locking serial port works different on Linux and Mac OS.
	* Move serial file into own subdirectory and namespace 'io'.
	* Add Noncopyable.
	* Add thread class.

2011-02-26  Bernhard Walle <bernhard@bwalle.de>

	* Fix build on Mac OS X.

2010-12-05  Bernhard Walle <bernhard@bwalle.de>

	* Add daemonize().

2010-11-28  Bernhard Walle <bernhard@bwalle.de>

	* Fix undocumented stuff.
	* Fix compiler warnings.
	* Add SerialFile class to access a serial console.
	* Add example program 'serialread'.
	* Add replace_char() function in stringutil.h.
	* Add OptionParser.
	* Fix build on Mac OS.
	* Add target_link_libraries() for the extra libraries.

2010-11-27  Bernhard Walle <bernhard@bwalle.de>

	* Doxygen fixes.
	* Move everything into 'bw' namespace.
	* Use "git describe" to build the version hash.
	* Change the documentation to include <libbw/header.h> instead of
	  <header.h>.
	* Add debugging macros (e.g. BW_DEBUG).

2010-03-21  Bernhard Walle <bernhard@bwalle.de>

	* Remove 'using', use 'std::' explicitely.

2009-09-26  Bernhard Walle <bernhard@bwalle.de>

	* Change license in the header of stringutil.{h,cc} to BSD.
	* Add completion interface.

2009-09-20  Bernhard Walle <bernhard@bwalle.de>

	* Initial version.
	* Add stringutil.